# termux-ndk

./: README.md
archives/: README
build-apk/: README.md
build-app/: README.md
build-app/example/FileManager/: build.gradle
build-app/example/FileManager/app/: build.gradle
build-app/example/cmake-example/: build.gradle
build-app/example/cmake-example/app/: build.gradle
build-app/example/hello-jni-kotlinApp/: local.properties
build-app/example/hello-jni-kotlinApp/app/: build.gradle
cmake-example/: build.gradle  gradle.properties  local.properties
cmake-example/app/: build.gradle
cmake-example/app/src/main/: AndroidManifest.xml
cmake-example/app/src/main/cpp/: CMakeLists.txt  main.cpp
cmake-example/app/src/main/java/com/cmake/test/: MainActivity.java
cmake-example/cmake-example/app/: build.gradle
cmake-example/cmake-example/app/src/main/cpp/: CMakeLists.txt  main.cpp
cocos2d-game/: README.md
cocos2d-game/templates/cpp-template-default/proj.android/: gradle.properties
cocos2d-game/templates/cpp-template-default/proj.android/app/: build.gradle
cocos2d-game/templates/lua-template-default/frameworks/runtime-src/proj.android/: gradle.properties
cocos2dx-game/: README.md
cocos2dx-game/patches/: CCLuaEngine.cpp.patch
cocos2dx-game/templates/cpp-template-default/proj.android/: gradle.properties
cocos2dx-game/templates/cpp-template-default/proj.android/app/: build.gradle
cocos2dx-game/templates/lua-template-default/frameworks/runtime-src/proj.android/: gradle.properties
cocos2dx-game/templates/lua-template-default/frameworks/runtime-src/proj.android/app/: build.gradle
example/cmake-example/: build.gradle
example/cmake-example/app/: build.gradle
example/hello-jni-kotlinApp/: local.properties
example/hello-jni-kotlinApp/app/: build.gradle
hello-jni-kotlinApp/: gradle.properties
hello-jni-kotlinApp/app/: build.gradle
llvm_android/: builders.py  configs.py  do_build.py  paths.py
openjdk-build/: README.md
openjdk-build/patches/: os_linux.cpp.patch
openjdk-build/tls-test/: CMakeLists.txt  build.sh  main.cpp
patches/: align_fix.py  android.toolchain.cmake.patch  base_builders.py.patch  builders.py.patch  configs.py.patch  constants.py.patch  do_build.py.patch  hosts.py.patch  paths.py.patch  paths.py.path  toolchains.py.patch  vis.c.patch
renderscript/: CMakeLists.libbcc.txt  CMakeLists.liblog.txt  CMakeLists.slang.txt  CMakeLists.txt  build.sh
renderscript/libbcc/: Android.bp  CMakeLists.txt  build.sh
renderscript/libbcc/bcinfo/: BitcodeTranslator.cpp  CMakeLists.txt  MetadataExtractor.cpp
renderscript/libbcc/bcinfo/BitReader_2_7/: CMakeLists.txt
renderscript/libbcc/bcinfo/BitReader_3_0/: CMakeLists.txt
renderscript/libbcc/bcinfo/Wrap/: CMakeLists.txt  bitcode_wrapperer.cpp
renderscript/libbcc/bcinfo/tools/: CMakeLists.txt
renderscript/libbcc/lib/: Assert.h  BCCContext.cpp  CMakeLists.txt  Compiler.cpp  CompilerConfig.cpp  FileBase.cpp  Initialization.cpp  RSAddDebugInfoPass.cpp  RSCompilerDriver.cpp  RSEmbedInfo.cpp  RSKernelExpand.cpp  RSScreenFunctionsPass.cpp  RSScriptGroupFusion.cpp  RSX86CallConvPass.cpp  RSX86TranslateGEPPass.cpp  Script.cpp  Source.cpp
renderscript/libbcc/tools/: CMakeLists.txt
renderscript/libbcc/tools/bcc/: Main.cpp
renderscript/libbcc/tools/bcc_compat/: CMakeLists.txt
renderscript/slang/: CMakeLists.txt  RSCCOptions.inc  RSCCOptions.td  build.sh  llvm-rs-cc.cpp  rs_cc_options.h  rs_cc_options_orig.cpp  slang_rs_export_type.h  slang_version.h
renderscript/slang/BitWriter_2_9/: CMakeLists.txt
renderscript/slang/BitWriter_2_9_func/: BitcodeWriter.cpp  CMakeLists.txt
renderscript/slang/BitWriter_3_2/: CMakeLists.txt
renderscript/slang/StripUnkAttr/: CMakeLists.txt
